Removing dependency on older log4j libraries and upgrading poi library