@@ -40,6 +40,7 @@ import org.apache.poi.hssf.usermodel.HSSFCell;
 import org.apache.poi.hssf.usermodel.HSSFSheet;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.poifs.filesystem.POIFSFileSystem;
+import org.apache.poi.ss.usermodel.CellType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -997,7 +998,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                         } else
                         // throws NPE, so added the guard clause above, tbh
                         // 06/07
-                        if (cell.getCellType() == HSSFCell.CELL_TYPE_NUMERIC) {
+                        if (cell.getCellType() == CellType.NUMERIC) {
                             double dphi = cell.getNumericCellValue();
                             if ((dphi - (int) dphi) * 1000 == 0) {
                                 phi = (int) dphi + "";
@@ -1026,7 +1027,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                         // added to stop NPEs, tbh 06/04/2007
                         if (StringUtil.isBlank(required)) {
                             required = "0";
-                        } else if (cell.getCellType() == HSSFCell.CELL_TYPE_NUMERIC) {
+                        } else if (cell.getCellType() == CellType.NUMERIC) {
                             double dr = cell.getNumericCellValue();
                             if ((dr - (int) dr) * 1000 == 0) {
                                 required = (int) dr + "";
@@ -2051,7 +2052,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                         } else {
                             if (StringUtil.isBlank(groupRepeatNumber)) {
                                 groupRepeatNumber = "1";
-                            } else if (cell.getCellType() == HSSFCell.CELL_TYPE_NUMERIC) {
+                            } else if (cell.getCellType() == CellType.NUMERIC) {
                                 double dr = cell.getNumericCellValue();
                                 if ((dr - (int) dr) * 1000 == 0) {
                                     groupRepeatNumber = (int) dr + "";
@@ -2074,7 +2075,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                         } else {
                             if (StringUtil.isBlank(groupRepeatMax)) {
                                 groupRepeatMax = "40";// problem, tbh
-                            } else if (cell.getCellType() == HSSFCell.CELL_TYPE_NUMERIC) {
+                            } else if (cell.getCellType() == CellType.NUMERIC) {
                                 double dr = cell.getNumericCellValue();
                                 if ((dr - (int) dr) * 1000 == 0) {
                                     groupRepeatMax = (int) dr + "";
@@ -2146,7 +2147,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                         // igMeta.setRepeatArray(groupRepeatArray);
                         igMeta.setShowGroup(isShowGroup);
                         try {
-                            igMeta.setRepeatMax(new Integer(Integer.parseInt(groupRepeatMax)));
+                            igMeta.setRepeatMax(Integer.valueOf(groupRepeatMax));
                             //mantiss 13917
                             
                             if (igMeta.getRepeatMax() < 1){
@@ -2729,25 +2730,25 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
 
                     for (int y = 0; y < numCells; y++) {
                         HSSFCell cell = sheet.getRow(i).getCell((short) y);
-                        int cellType = 0;
+                        CellType cellType = null;
                         String error = "&nbsp;";
                         String errorKey = j + "," + i + "," + y;
                         if (htmlErrors.containsKey(errorKey)) {
                             error = "<span class=\"alert\">" + htmlErrors.get(errorKey) + "</span>";
                         }
                         if (cell == null) {
-                            cellType = HSSFCell.CELL_TYPE_BLANK;
+                            cellType = CellType.BLANK;
                         } else {
                             cellType = cell.getCellType();
                         }
                         switch (cellType) {
-                        case HSSFCell.CELL_TYPE_BLANK:
+                        case BLANK:
                             buf.append("<td class=\"table_cell\">" + error + "</td>");
                             break;
-                        case HSSFCell.CELL_TYPE_NUMERIC:
+                        case NUMERIC:
                             buf.append("<td class=\"table_cell\">" + cell.getNumericCellValue() + " " + error + "</td>");
                             break;
-                        case HSSFCell.CELL_TYPE_STRING:
+                        case STRING:
                             buf.append("<td class=\"table_cell\">" + cell.getStringCellValue() + " " + error + "</td>");
                             break;
                         default:
@@ -2807,18 +2808,18 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
 
     public String getValue(HSSFCell cell) {
         String val = null;
-        int cellType = 0;
+        CellType cellType = null;
         if (cell == null) {
-            cellType = HSSFCell.CELL_TYPE_BLANK;
+            cellType = CellType.BLANK;
         } else {
             cellType = cell.getCellType();
         }
 
         switch (cellType) {
-        case HSSFCell.CELL_TYPE_BLANK:
+        case BLANK:
             val = "";
             break;
-        case HSSFCell.CELL_TYPE_NUMERIC:
+        case NUMERIC:
             // YW << Modify code so that floating number alone can be used for
             // CRF version. Before it must use, e.g. v1.1
             // Meanwhile modification has been done for read PHI cell and
@@ -2835,7 +2836,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
             }
             // logger.debug("found a numeric cell after transfer: "+val);
             break;
-        case HSSFCell.CELL_TYPE_STRING:
+        case STRING:
             val = cell.getStringCellValue();
             if (val.matches("'")) {
                 // logger.debug("Found single quote! "+val);
@@ -2845,7 +2846,7 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
             // cell.getStringCellValue()
             // + "</font></td>");
             break;
-        case HSSFCell.CELL_TYPE_BOOLEAN:
+        case BOOLEAN:
             boolean val2 = cell.getBooleanCellValue();
             if (val2) {
                 val = "true";
@@ -2884,21 +2885,21 @@ public class SpreadSheetTableRepeating implements SpreadSheetTable {
                 for (int y = 0; y < numCells; y++) {
 
                     HSSFCell cell = sheet.getRow(i).getCell((short) y);
-                    int cellType = 0;
+                    CellType cellType = null;
                     if (cell == null) {
-                        cellType = HSSFCell.CELL_TYPE_BLANK;
+                        cellType = CellType.BLANK;
                     } else {
                         cellType = cell.getCellType();
                     }
 
                     switch (cellType) {
-                    case HSSFCell.CELL_TYPE_BLANK:
+                    case BLANK:
                         buf.append("<td> </td>");
                         break;
-                    case HSSFCell.CELL_TYPE_NUMERIC:
+                    case NUMERIC:
                         buf.append("<td>" + cell.getNumericCellValue() + "</td>");
                         break;
-                    case HSSFCell.CELL_TYPE_STRING:
+                    case STRING:
                         buf.append("<td>" + cell.getStringCellValue() + "</td>");
                         break;
                     default:
